RESOLVED FIXED183005
[GStreamer] media/video-src-blob-using-open-panel.html crashes in Debug
https://bugs.webkit.org/show_bug.cgi?id=183005
Summary [GStreamer] media/video-src-blob-using-open-panel.html crashes in Debug
Philippe Normand
Reported 2018-02-21 08:54:52 PST
STDERR: 0:00:19.693168597 5693 0x55aaca5c0790 DEBUG webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:168:~MediaPlayerPrivateGStreamer: Disposing player STDERR: 0:00:19.696554698 5693 0x7f45fc0868a0 WARN GST_PADS gstpad.c:4179:gst_pad_peer_query:<sink:proxypad924> could not send sticky events STDERR: 0:00:19.700973499 5693 0x55aacb072cf0 WARN basetransform gstbasetransform.c:1415:gst_base_transform_reconfigure:<filter-convert> warning: not negotiated STDERR: 0:00:19.700988922 5693 0x55aacb072cf0 WARN basetransform gstbasetransform.c:1415:gst_base_transform_reconfigure:<filter-convert> warning: not negotiated STDERR: 0:00:19.719660736 5693 0x7f45f8107a80 WARN GST_PADS gstpad.c:4179:gst_pad_peer_query:<sink:proxypad919> could not send sticky events STDERR: 0:00:19.990170122 5693 0x55aaca5c0790 DEBUG webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:2304:setPreload: Setting preload to Auto STDERR: 0:00:19.990341328 5693 0x55aaca5c0790 DEBUG webkitmediaplayer MediaPlayerPrivateGStreamerBase.cpp:1157:setStreamVolumeElement: Not setting stream volume, trusting system one STDERR: 0:00:19.990357452 5693 0x55aaca5c0790 DEBUG webkitmediaplayer MediaPlayerPrivateGStreamerBase.cpp:1159:setStreamVolumeElement: Setting stream muted true STDERR: 0:00:19.990373372 5693 0x55aaca5c0790 INFO webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:2418:createGSTPlayBin: Using legacy playbin element: true STDERR: 0:00:19.999516137 5693 0x55aaca5c0790 INFO webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:233:setPlaybinURL: Load blob:file:///1e0a018f-c5a4-4f68-aeef-f0bc6768dae1 STDERR: 0:00:19.999533635 5693 0x55aaca5c0790 DEBUG webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:264:load: preload: Auto STDERR: 0:00:19.999540245 5693 0x55aaca5c0790 DEBUG webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:305:commitLoad: Committing load. STDERR: 0:00:19.999543382 5693 0x55aaca5c0790 DEBUG webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:369:changePipelineState: Changing state change to PAUSED from NULL with VOID_PENDING pending STDERR: 0:00:20.003982707 5693 0x55aaca5c0790 DEBUG webkitmediaplayer MediaPlayerPrivateGStreamerBase.cpp:323:handleSyncMessage: Handling gst.gl.GLDisplay need-context message for glcolorconvertelement104 STDERR: 0:00:20.004010671 5693 0x55aaca5c0790 DEBUG webkitmediaplayer MediaPlayerPrivateGStreamerBase.cpp:447:ensureGstGLContext: Creating X11 shared GL display STDERR: 0:00:20.004194084 5693 0x55aaca5c0790 DEBUG webkitmediaplayer MediaPlayerPrivateGStreamerBase.cpp:323:handleSyncMessage: Handling gst.gl.app_context need-context message for glcolorconvertelement104 STDERR: ASSERTION FAILED: url.protocol().substring(0, 7) == "webkit+" STDERR: ../../Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp(628) : WebCore::URL convertPlaybinURI(const char*) STDERR: 1 0x7f46f6cd8f16 /home/phil/WebKit/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(WTFCrash+0x1e) [0x7f46f6cd8f16] STDERR: 2 0x7f470244fca3 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0x9766ca3) [0x7f470244fca3] STDERR: 3 0x7f470244feb7 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0x9766eb7) [0x7f470244feb7] STDERR: 4 0x7f46f03709f9 /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgstreamer-1.0.so.0(gst_uri_handler_set_uri+0x139) [0x7f46f03709f9] STDERR: 5 0x7f46f0370c41 /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgstreamer-1.0.so.0(gst_element_make_from_uri+0x171) [0x7f46f0370c41] STDERR: 6 0x7f467af98403 /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/gstreamer-1.0/libgstplayback.so(+0x27403) [0x7f467af98403] STDERR: 7 0x7f46f031e5de /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgstreamer-1.0.so.0(gst_element_change_state+0x3e) [0x7f46f031e5de] STDERR: 8 0x7f46f031e8c5 /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgstreamer-1.0.so.0(gst_element_change_state+0x325) [0x7f46f031e8c5] STDERR: 9 0x7f46f031ed19 /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgstreamer-1.0.so.0(+0x5dd19) [0x7f46f031ed19] STDERR: 10 0x7f467afb56db /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/gstreamer-1.0/libgstplayback.so(+0x446db) [0x7f467afb56db] STDERR: 11 0x7f467afb6438 /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/gstreamer-1.0/libgstplayback.so(+0x45438) [0x7f467afb6438] STDERR: 12 0x7f46f031e5de /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgstreamer-1.0.so.0(gst_element_change_state+0x3e) [0x7f46f031e5de] STDERR: 13 0x7f46f031e8c5 /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgstreamer-1.0.so.0(gst_element_change_state+0x325) [0x7f46f031e8c5] STDERR: 14 0x7f46f031ed19 /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgstreamer-1.0.so.0(+0x5dd19) [0x7f46f031ed19] STDERR: 15 0x7f4702424f04 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::MediaPlayerPrivateGStreamer::changePipelineState(GstState)+0x1c0) [0x7f4702424f04] STDERR: 16 0x7f4702424953 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::MediaPlayerPrivateGStreamer::commitLoad()+0xb1) [0x7f4702424953] STDERR: 17 0x7f47024247bf /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::MediaPlayerPrivateGStreamer::load(WTF::String const&)+0x32d) [0x7f47024247bf] STDERR: 18 0x7f4701c7197f /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::MediaPlayer::loadWithNextMediaEngine(WebCore::MediaPlayerFactory const*)+0x3e9) [0x7f4701c7197f] STDERR: 19 0x7f4701c712bd /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::MediaPlayer::load(WebCore::URL const&, WebCore::ContentType const&, WTF::String const&)+0x32b) [0x7f4701c712bd] STDERR: 20 0x7f470163c359 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::HTMLMediaElement::loadResource(WebCore::URL const&, WebCore::ContentType&, WTF::String const&)+0x93d) [0x7f470163c359] STDERR: 21 0x7f470163b786 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0x8952786) [0x7f470163b786] STDERR: 22 0x7f47016550c6 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0x896c0c6) [0x7f47016550c6] STDERR: 23 0x7f46ff900cf0 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::Function<void ()>::operator()() const+0x5e) [0x7f46ff900cf0] STDERR: 24 0x7f4700e0af5e /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::GenericTaskQueue<WebCore::Timer>::enqueueTask(WTF::Function<void ()>&&)::{lambda()#1}::operator()() const+0x80) [0x7f4700e0af5e] STDERR: 25 0x7f4700e0c3ec /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::Function<void ()>::CallableWrapper<WebCore::GenericTaskQueue<WebCore::Timer>::enqueueTask(WTF::Function<void ()>&&)::{lambda()#1}>::call()+0x1c) [0x7f4700e0c3ec] STDERR: 26 0x7f46ff900cf0 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::Function<void ()>::operator()() const+0x5e) [0x7f46ff900cf0] STDERR: 27 0x7f4701b3d2a9 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::TaskDispatcher<WebCore::Timer>::dispatchOneTask()+0x67) [0x7f4701b3d2a9] STDERR: 28 0x7f4701b3d196 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::TaskDispatcher<WebCore::Timer>::sharedTimerFired()+0xe6) [0x7f4701b3d196] STDERR: 29 0x7f4701b3d023 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0x8e54023) [0x7f4701b3d023] STDERR: 30 0x7f4701b3dafa /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0x8e54afa) [0x7f4701b3dafa] STDERR: 31 0x7f46ff900cf0 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::Function<void ()>::operator()() const+0x5e) [0x7f46ff900cf0]
Attachments
Patch (2.44 KB, patch)
2018-02-21 09:14 PST, Philippe Normand
calvaris: review+
Philippe Normand
Comment 1 2018-02-21 09:14:35 PST
Philippe Normand
Comment 2 2018-02-23 01:57:54 PST
Radar WebKit Bug Importer
Comment 3 2018-02-23 01:58:32 PST
Philippe Normand
Comment 4 2018-02-23 02:06:13 PST
Note You need to log in before you can comment on or make changes to this bug.