[GStreamer] media/video-src-blob-using-open-panel.html crashes in Debug https://bugs.webkit.org/show_bug.cgi?id=183005

Reviewed by Xabier Rodriguez-Calvar.

Test: media/video-src-blob-using-open-panel.html

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::convertToInternalProtocol): Also convert blob URIs
because they're handled by our httpsrc element.
* platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
(webKitWebSrcGetProtocols): Prefix blob URIs too, for consistency purpose.

Canonical link: https://commits.webkit.org/198811@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228944 268f45cc-cd09-0410-ab3c-d52691b4dbfc